# nearby

connections/implementation/: service_controller_router_test.cc
presence/rust/: .gitignore
presence/rust/engine/: Cargo.toml  README
presence/rust/engine/presence_core/: Cargo.toml
presence/rust/engine/presence_core/src/: ble_scan_provider.rs  client_provider.rs  lib.rs
presence/rust/engine/presence_core/tests/: engine_test.rs
presence/rust/engine/presence_cpp_ffi/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml  presence.h  presence_data.h  presence_enums.h  presence_ffi.h
presence/rust/engine/presence_cpp_ffi/cpp/: CMakeLists.txt  c_to_rust.cpp  ffi.cpp  presence_platform.c  presence_platform.cpp  presence_platform.h  presence_platform.hpp  presence_provider.c  presence_provider.h
presence/rust/engine/presence_cpp_ffi/examples/: CMakeLists.txt  main.cpp
presence/rust/engine/presence_cpp_ffi/hello/: CMakeLists.txt  hello.c
presence/rust/engine/presence_cpp_ffi/src/: ble_scanner_cpp.rs  c_to_rust.rs  client_provider.rs  data.rs  discovery_callback_cpp.rs  lib.rs  rust_to_c.rs
presence/rust/engine/presence_cpp_ffi/tests/: CMakeLists.txt  test_main.cpp
presence/rust/engine/presence_java_ffi/: CMakeLists.txt  Cargo.toml
presence/rust/engine/presence_java_ffi/examples/: Main.java
presence/rust/engine/presence_java_ffi/java/: CMakeLists.txt  Engine.java  PresenceBleScanRequest.java  PresenceDiscoveryRequestBuilder.java  PresenceDiscoveryResult.java  PresenceEngine.java  PresenceScanResultBuilder.java  com_google_nearby_presence_engine_Engine.h  com_google_nearby_presence_engine_PresenceEngine.h
presence/rust/engine/presence_java_ffi/src/: discovery_result.rs  lib.rs  presence_discovery_request_builder.rs  presence_discovery_result_builder.rs  presence_scan_request_builder.rs  presence_scan_result_builder.rs
presence/rust/engine/presence_rust/: Cargo.toml
presence/rust/engine/presence_rust/src/: engine.rs  lib.rs
presence/rust/event_poller/: Cargo.toml
presence/rust/event_poller/src/: lib.rs
presence/rust/event_poller/tests/: event_poller_tests.rs
presence/rust/experiment/event_loop/src/: main.rs
presence/rust/experiment/event_poller/: Cargo.toml
presence/rust/experiment/event_poller/src/: lib.rs  main.rs
presence/rust/experiment/event_poller/tests/: event_poller_tests.rs
presence/rust/system_api/: Cargo.toml
presence/rust/system_api/android/: CMakeLists.txt  Cargo.toml
presence/rust/system_api/android/examples/: Main.java  TestApi.java  com_google_nearby_api_TestApi.h  main.rs  test_api.rs  test_engine.rs
presence/rust/system_api/android/src/: lib.rs
presence/rust/system_api/core/: Cargo.toml
presence/rust/system_api/core/src/: lib.rs
presence/rust/system_api/java_ffi/: Cargo.toml
presence/rust/system_api/java_ffi/java/: Ble.java
presence/rust/system_api/java_ffi/src/: lib.rs
proto/: connections_enums.proto
